--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <nav> 
-        <div class="logo"> <img src="/images/equip-check-logo.png" alt="logo"></div>
-        <div class="navitems"> 
-            <a href="/">Social</a>
-            <a href="/">Sobre</a>    
+        <div class="logo">
+             <img src="/images/equip-check-logo.svg" alt="logo"> 
+             <a href="/"></a>
         </div>
+        <div class="navitems"> <img src="/images/equip-check-dropdown.svg" alt=""></div>
     </nav>
 
     <div class="blocos">
