melhorias no código 02/03/2024

--- a/index.html
+++ b/index.html
@@ -7,30 +7,40 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <nav> 
-        <div class="logo">
+
+        <figure class="logo">
              <img src="/images/equip-check-logo.svg" alt="logo"> 
              <a href="/"></a>
-        </div>
+        </figure>
+
         <div class="navitems"> <img src="/images/equip-check-dropdown.svg" alt=""></div>
+
     </nav>
 
+    
     <div class="blocos">
+
         <div class="bloco1" href="/">
-            <div class="imagem"></div>
+            <figure class="imagem"></figure>
             <h3> EFFECTS </h3>
             <p>Look what crazy stuff people are doing with their effect pedals and grow some inspiration!</p>
         </div>
+
         <div class="bloco2">
-            <div class="imagem"> </div>
+            <figure class="imagem"> </figure>
             <h3> INSTRUMENTS </h3>
             <p>Search for famous instruments and see what people are saying about them!</p>
         </div>
+
         <div class="bloco3">
-            <div class="imagem"></div>
+            <figure class="imagem"></figure>
             <h3> AMPS & CABINETS </h3>
             <p>For eletric lovers, a good amp with a monstrous cabinet is the way to a powerful and bright sound!</p>
         </div>
+
     </div>
+
 </body>
 </html>
