--- a/index.html
+++ b/index.html
@@ -8,39 +8,39 @@
 </head>
 <body>
 
-    <nav> 
-
+    <header>
         <figure class="logo">
-             <img src="/images/equip-check-logo.svg" alt="logo"> 
-             <a href="/"></a>
+            <img src="/images/equip-check-logo.svg" alt="logo"> 
+            <a href="/"></a>
         </figure>
-
-        <div class="navitems"> <img src="/images/equip-check-dropdown.svg" alt=""></div>
-
-    </nav>
-
+        <nav>
+            <div class="navitems"> 
+                <img src="/images/equip-check-dropdown.svg" alt="" href="/">
+            </div>
+        </nav>
+    </header>
     
-    <div class="blocos">
+    <section class="blocos">
 
-        <div class="bloco1" href="/">
+        <aside class="bloco1" href="/">
             <figure class="imagem"></figure>
             <h3> EFFECTS </h3>
             <p>Look what crazy stuff people are doing with their effect pedals and grow some inspiration!</p>
-        </div>
+        </aside>
 
-        <div class="bloco2">
+        <aside class="bloco2">
             <figure class="imagem"> </figure>
             <h3> INSTRUMENTS </h3>
             <p>Search for famous instruments and see what people are saying about them!</p>
-        </div>
+        </aside>
 
-        <div class="bloco3">
+        <aside class="bloco3">
             <figure class="imagem"></figure>
             <h3> AMPS & CABINETS </h3>
             <p>For eletric lovers, a good amp with a monstrous cabinet is the way to a powerful and bright sound!</p>
-        </div>
+        </aside>
 
-    </div>
+    </section>
 
 </body>
 </html>
