--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,18 +23,18 @@
     <section class="blocos">
 
         <aside class="bloco1" href="/">
-            <figure class="imagem"></figure>
+            <img src="./images/effects-icon.png" alt="effects-icon">
             <h3> EFFECTS </h3>
             <p>Look what crazy stuff people are doing with their effect pedals and grow some inspiration!</p>
         </aside>
 
-        <aside class="bloco2">
+        <aside class="bloco2" href="/">
             <figure class="imagem"> </figure>
             <h3> INSTRUMENTS </h3>
             <p>Search for famous instruments and see what people are saying about them!</p>
         </aside>
 
-        <aside class="bloco3">
+        <aside class="bloco3" href="/">
             <figure class="imagem"></figure>
             <h3> AMPS & CABINETS </h3>
             <p>For eletric lovers, a good amp with a monstrous cabinet is the way to a powerful and bright sound!</p>
