--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equip Check</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
 
     <header>
         <figure class="logo">
-            <img src="/images/equip-check-logo.svg" alt="logo"> 
-            <a href="/"></a>
+            <a href="/index.html">
+                <img src="/images/equip-check-logo.svg" alt="logo"> 
+            </a> 
         </figure>
         <nav>
             <div class="navitems"> 
@@ -22,20 +24,20 @@
     
     <section class="blocos">
 
-        <aside class="bloco1" href="/">
+        <aside class="bloco1">
             <img src="./images/effects-icon.png" alt="effects-icon">
             <h3> EFFECTS </h3>
             <p>Look what crazy stuff people are doing with their effect pedals and grow some inspiration!</p>
         </aside>
 
-        <aside class="bloco2" href="/">
-            <figure class="imagem"> </figure>
+        <aside class="bloco2">
+            <img src="./images/instruments_icon.png" alt="instruments-icon">
             <h3> INSTRUMENTS </h3>
             <p>Search for famous instruments and see what people are saying about them!</p>
         </aside>
 
-        <aside class="bloco3" href="/">
-            <figure class="imagem"></figure>
+        <aside class="bloco3">
+            <img src="./images/amps-and-cabinets-icon.png" alt="amps-and-cabinets-icon">
             <h3> AMPS & CABINETS </h3>
             <p>For eletric lovers, a good amp with a monstrous cabinet is the way to a powerful and bright sound!</p>
         </aside>
