--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,7 @@
         </figure>
         <nav>
             <div class="navitems"> 
-                <img src="/images/equip-check-dropdown.svg" alt="" href="/">
+                <img src="/images/equip-check-dropdown.svg" alt="dropdown">
             </div>
         </nav>
     </header>
