--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
 
         <aside class="bloco1">
             <img src="./images/effects-icon.png" alt="effects-icon">
-            <h3> EFFECTS </h3>
+            <a href="effects/effects.html"><h3> EFFECTS </h3></a>
             <p>Look what crazy stuff people are doing with their effect pedals and grow some inspiration!</p>
         </aside>
 
         <aside class="bloco2">
             <img src="./images/instruments_icon.png" alt="instruments-icon">
-            <h3> INSTRUMENTS </h3>
+            <a href="/instruments/instruments.html"> <h3> INSTRUMENTS </h3> </a>
             <p>Search for famous instruments and see what people are saying about them!</p>
         </aside>
 
         <aside class="bloco3">
             <img src="./images/amps-and-cabinets-icon.png" alt="amps-and-cabinets-icon">
-            <h3> AMPS & CABINETS </h3>
+            <a href="/amps-and-cabinets/amps-and-cabinets.html"><h3> AMPS & CABINETS </h3> </a>
             <p>For eletric lovers, a good amp with a monstrous cabinet is the way to a powerful and bright sound!</p>
         </aside>
 
