--- a/amps-and-cabinets/amps-and-cabinets.html
+++ b/amps-and-cabinets/amps-and-cabinets.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equip Check</title>
     <link rel="stylesheet" href="amps-and-cabinets-style.css">
+    <link rel="stylesheet" href="/section-responsive.css">
 </head>
 <body>
 
