--- a/effects/effects.html
+++ b/effects/effects.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equip Check</title>
     <link rel="stylesheet" href="effects-style.css">
+    <link rel="stylesheet" href="/section-responsive.css">
 </head>
 <body>
 
@@ -29,6 +30,13 @@
 
             <aside class="filtros">
                 <p> Filters </p>
+                    <h5> Brand </h5>
+                    <div class="checkers">
+                        <input type="checkbox" name="" id=""> BOSS <br>
+                        <input type="checkbox" name="" id=""> MXR <br>
+                        <input type="checkbox" name="" id=""> Electro-Harmonix <br>
+                        <input type="checkbox" name="" id=""> Darkglass <br>
+                </div>
             </aside>
 
         </section>
